Fixed menu size on mobile

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -69,10 +69,17 @@
   .site-title {
     margin-bottom: $spacer1;
   }
-
   .site-nav a {
     margin-right: $spacer1;
   }
+}
+
+@include mq-up(xs) {
+
+  .site-nav a {
+    font-size: 0.8rem;
+  }
+
 }
 
 @include mq-up(md) {
@@ -87,7 +94,6 @@
     width: 50%;
     margin-top: $spacer0;
     justify-content: space-around;
-    font-size: 1rem;
 
     a {
       margin-right: 0;
